--- a/src/main/resources/templates/test.html
+++ b/src/main/resources/templates/test.html
@@ -14,6 +14,6 @@
 	<div shiro:hasPermission="user:update">
 	用户更新:<a href = "update">用户更新</a><br/>
 	</div>
-	<a href = "toogin">登录</a><br/>
+	<a href = "toLogin">登录</a><br/>
 </body>
 </html>
